--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
         integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
         crossorigin="anonymous"></script>
 
+</head>
+<body class="bg-white">
     <div class="container-fluid bg-dark p-5 ">
         <div class="row-mb-3">
             <div class="col-lg-8 col-md-10 header mx-auto">
                 <h1 class="display-3">RSS агрегатор</h1>
                 <h2 class="h5">Начните читать RSS сегодня! Это легко, это красиво.</h2>
                 <form class="form-floating">
-                    <label for="floatingInputInvalid">Invalid input</label>
+                    <label for=> input-form</label>
                 <div class="row  mb-3 justify-content-between p-2">
-            <input class="col-lg-7   form-control-lg form-control is-invalid" id="floatingInputInvalid"  type="url" placeholder="Ссылка RSS">
+            <input class="col-lg-7   form-control-lg form-control" id="input-form"  type="url" placeholder="Ссылка RSS">
                     <button type="button" class=" col-4 btn btn-primary btn-lg">Добавить</button>
                     <p class="text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
                 </div>
@@ -37,10 +39,8 @@
         </div>
 
     </div>
-</head>
-<body class="bg-white">
 
-</body>
+
 <footer class=" bg-light text-center ">
 
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
@@ -48,5 +48,6 @@
     </div>
 
 </footer>
-
+<script src="./src/app.js" type="module"></script>
+</body>
 </html>
