--- a/index.html
+++ b/index.html
@@ -31,15 +31,33 @@
                     <label for=> input-form</label>
                 <div class="row  mb-3 justify-content-between p-2">
                     <label for="input-form"></label>
-                    <input class="col-lg-7   form-control-lg form-control" id="input-form" type="url" placeholder="Ссылка RSS">
+                    <input class="col-lg-7   form-control-lg form-control" id="input-form" type="url" placeholder="Ссылка RSS" value="https://ru.hexlet.io/lessons.rss">
                     <button type="button" class=" col-4 btn btn-primary btn-lg">Добавить</button>
                     <p class="text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
                 </div>
                 </form>
+
             </div>
         </div>
 
     </div>
+    <section class="container-fluid container-xxl p-5">
+        <div class="row">
+            <div class="col-8">
+                <div class="card border-0">
+                 <div class="card-body">
+                    <h2 class="card-title h4">Посты</h2>
+                </div>
+                    <ul class="list-group border-0 rounded-0" id="posts"></ul>
+                </div>
+            </div>
+                 <div class=" col-3 card-body">
+                     <h2 class="card-title h4">Фиды</h2>
+
+        <ul class="list-group border-0 rounded-0"  id="feeds"></ul>
+                </div></div>
+    </section>
+
 
 
 <footer class=" bg-light text-center ">
@@ -52,3 +70,5 @@
 
 </body>
 </html>
+
+
