--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <!doctype html>
     <meta charset="UTF-8">
@@ -33,13 +33,20 @@
                     <label for="input-form"></label>
                     <input class="col-lg-7   form-control-lg form-control" id="input-form" type="url" placeholder="Ссылка RSS" value="https://ru.hexlet.io/lessons.rss">
                     <button type="button" class=" col-4 btn btn-primary btn-lg">Добавить</button>
+
                     <p class="text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
+                    <p class=" message"></p>
                 </div>
                 </form>
 
             </div>
         </div>
 
+    </div>
+    <div class="text-center">
+        <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
     </div>
     <section class="container-fluid container-xxl p-5">
         <div class="row">
@@ -68,7 +75,26 @@
 
 </footer>
 
+<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                description
+            </div>
+            <div class="modal-footer">
+
+
+                <a class="btn btn-primary full-article" href="#" role="button" target="_blank" rel="noopener noreferrer">Читать полностью </a>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 </body>
 </html>
-
-
