--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <h1 class="display-3">RSS агрегатор</h1>
                 <h2 class="h5">Начните читать RSS сегодня! Это легко, это красиво.</h2>
                <div id="formRss">
+           </div>
+          </div>
         </div>
-    </div>
-            <div>
     <section class="container-fluid container-xxl p-5">
         <div class="row">
             <div class="col-8">
@@ -73,5 +73,5 @@
 </div>
 
 
-</body>
+</div></body>
 </html>
