--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 
 <!DOCTYPE html>
 <script type="module">
-    import initPage from '/src/index';
-    initPage();
+    import init from '/src/view';
+    init();
 </script>
 
 <html lang="en" xmlns="http://www.w3.org/1999/html">
