--- a/template.html
+++ b/template.html
@@ -18,19 +18,17 @@
             <h2  class="text-light h5">Начните читать RSS сегодня! Это легко, это красиво.</h2>
             <div id="formRss">
             </div>
+
             <form class="form-floating rss-form">
                 <div class="row mb-3 justify-content-between p-2">
-
-        <label for="input-form"></label>
-        <input autofocus required class="col-lg-7 form-control-lg form-control" name="url" aria-label="url"  id="input-form" type="url" placeholder="Ссылка RSS" />
-
-        <div class="text-center col-1">
+                    <label for="input-form"></label>
+        <input autofocus required class="col-lg-7 form-control-lg" name="url" aria-label="url"  id="input-form" type="url" placeholder="Ссылка RSS" />
+                    <div class="text-center col-1">
             <div class="spinner-border d-none" role="status">
                 <span class="visually-hidden">Loading...</span>
             </div>
-        </div>
-
-        <button type="submit"  name="add" class=" col-4 btn btn-primary btn-lg">Добавить</button>
+                    </div>
+        <button type="submit"  name="add" class=" col-4  btn btn-primary btn-lg">Добавить</button>
         <p class="text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
         <p class="feedback message small"></p>
 
@@ -42,23 +40,21 @@
     </div>
 <section class="container-fluid container-xxl p-5">
     <div class="row">
-        <div class="col-8">
+        <div class="col-md-10 col-lg-8 order-1 mx-auto">
             <div class="card border-0" id="posts">
             </div>
         </div>
-        <div class=" col-3 card-body" id="feeds">
+        <div class="col-md-10 col-lg-4 order-0 order-lg-1 feeds">
+        <div class="  border-0" id="feeds">
+        </div>
         </div>
     </div>
 </section>
 
-
-
 <footer class=" bg-light text-center ">
-
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
         <a class="text-dark" href="https://hexlet.io">created by Hexlet</a>
     </div>
-
 </footer>
 
 <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -72,8 +68,6 @@
                 description
             </div>
             <div class="modal-footer">
-
-
                 <a id="readLink" class="btn btn-primary full-article" href="#" role="button" target="_blank" rel="noopener noreferrer">Читать полностью </a>
                 <button id="close" type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
             </div>
