--- a/template.html
+++ b/template.html
@@ -22,7 +22,7 @@
                 <div class="row mb-3 justify-content-between p-2">
 
         <label for="input-form"></label>
-        <input autofocus required class="col-lg-7 form-control-lg form-control" name="url" aria-label="url"  id="input-form" type="url" placeholder="Ссылка RSS" />
+        <input autofocus required class="col-lg-7 form-control-lg" name="url" aria-label="url"  id="input-form" type="url" placeholder="Ссылка RSS" />
 
         <div class="text-center col-1">
             <div class="spinner-border d-none" role="status">
@@ -30,7 +30,7 @@
             </div>
         </div>
 
-        <button type="submit"  name="add" class=" col-4 btn btn-primary btn-lg">Добавить</button>
+        <button role="buttton"  type="submit" aria-label="add" name="add" class=" col-4 btn btn-primary btn-lg">Добавить</button>
         <p class="text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
         <p class="feedback message small"></p>
 
