--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
 
-        <button role="buttton"  type="submit" aria-label="add" name="add" class=" col-4 btn btn-primary btn-lg">Добавить</button>
+        <button role="button"  type="submit" aria-label="add" name="add" class=" col-4 btn btn-primary btn-lg">Добавить</button>
         <p class="text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
         <p class="feedback message small"></p>
 
