--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-
 <!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="ru" xmlns="http://www.w3.org/1999/html">
 <head>
     <!doctype html>
     <meta charset="UTF-8">
