--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru" xmlns="http://www.w3.org/1999/html">
 <head>
-    <!doctype html>
     <meta charset="UTF-8">
+    <link href="/postcss.config.js" rel="stylesheet">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
