--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" xmlns="http://www.w3.org/1999/html">
+<html lang="ru" xmlns="http://www.w3.org/1999/html" xmlns:https="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -57,14 +57,12 @@
 </section>
 
 
+<footer class="footer border-top py-3 mt-5 bg-light">
+    <div class="container-xl">
+        <div class="text-center">created by
+    <a href="https://ru.hexlet.io/professions/frontend/projects/11" target="_blank">Hexlet</a>
+</div></div></footer>
 
-<footer class=" bg-light text-center ">
-
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2); position: relative">
-        <a class="text-dark" href="https://hexlet.io">created by Hexlet</a>
-    </div>
-
-</footer>
 
 <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
