--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" xmlns="http://www.w3.org/1999/html" xmlns:https="http://www.w3.org/1999/xhtml">
+<html lang="ru" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -40,7 +40,7 @@
     </div>
     </div>
 </div>
-    </div>
+
 <section class="container-fluid container-xxl p-5">
     <div class="row">
         <div class="col-8">
